discussion/kv_engine/171491/171491_rev32_discussion.txt
======================================================================================================================
DESCRIPTION:

Utilize folly::AsyncServerSocket

Folly contains code which allows us to remove our code
to accept client connections.

Later on we'll change the code to utilize folly's ability
to dispatch the clients to the various threads.

Change-Id: I7efc7020b52561f1f7f8d0af1e6743ef3fd2d9c9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-08-03 10:24:05.000000000
Message: 
Uploaded patch set 32: Patch Set 31 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-03 10:37:28.000000000
Message: 
Patch Set 32: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19212/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:52:66: error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
                const folly::SocketAddress& clientAddr) noexcept override {
                                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/io/async/AsyncServerSocket.h:168:18: note: hidden overloaded virtual function "folly::AsyncServerSocket::AcceptCallback::connectionAccepted" declared here: different number of parameters (3 vs 2)
    virtual void connectionAccepted(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:167:19: error: field type "CbServerSocketImpl::AcceptHandler" is an abstract class [clang-diagnostic-error]
    AcceptHandler acceptHandler;
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/io/async/AsyncServerSocket.h:168:18: note: unimplemented pure virtual method "connectionAccepted" in "AcceptHandler"
    virtual void connectionAccepted(
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:450:27: error: no member named "uuid" in namespace "cb" [clang-diagnostic-error]
            to_string(cb::uuid::random()),
                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19212/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:52:66:
error: non-virtual member function marked "override" hides virtual member function [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19212/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48064/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/network_interface_manager.cc(50): error C3668: "CbServerSocketImpl::AcceptHandler::connectionAccepted": method with override specifier "override" did not override any base class methods ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48064/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40386/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/network_interface_manager.cc:52:66:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40386/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8899/ : FAILURE

Compile error at [2022-08-03T10:25:57.606Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/network_interface_manager.cc:52:66:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8899/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20370/ : FAILURE

Compile error at [2022-08-03T10:35:24.788Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/network_interface_manager.cc:52:66:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20370/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21487/ : FAILURE

Compile error at [2022-08-03T10:28:51.380Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/network_interface_manager.cc:50:14:
error: ?void CbServerSocketImpl::AcceptHandler::connectionAccepted(folly::NetworkSocket, const folly::SocketAddress&)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21487/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22206/ : FAILURE

Compile error at [2022-08-03T10:25:26.159Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/network_interface_manager.cc:52:66:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22206/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29516/ : FAILURE

Compile error at [2022-08-03T10:29:32.558Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/network_interface_manager.cc:52:66:
error: non-virtual member function marked "override" hides virtual member function
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29516/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8996/ : FAILURE

Compile error at [2022-08-03T10:33:27.285Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/network_interface_manager.cc:50:14:
error: ?void CbServerSocketImpl::AcceptHandler::connectionAccepted(folly::NetworkSocket, const folly::SocketAddress&)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8996/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21130/ : FAILURE

Compile error at [2022-08-03T10:28:56.868Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/network_interface_manager.cc:50:14:
error: ?void CbServerSocketImpl::AcceptHandler::connectionAccepted(folly::NetworkSocket, const folly::SocketAddress&)? marked ?override?, but does not override
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21130/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18386/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
